--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </script>
 
 <body>
-<!-- 
+<!--
     Some sample spec to try
-    https://api.apis.guru/v2/specs/stripe.com/2019-02-19/swagger.json 
+    https://api.apis.guru/v2/specs/stripe.com/2019-02-19/swagger.json
     https://api.apis.guru/v2/specs/github.com/v3/swagger.json
     https://api.apis.guru/v2/specs/bitbucket.org/2.0/swagger.json
     https://petstore.swagger.io/v2/swagger.json
@@ -30,32 +30,35 @@
     ./specs/oneof1.yaml  <<< nested oneof
     https://cesdev.eng.sonicwall.com/api/q/openapi
 -->
-<rapi-doc 
-  spec-url = "./specs/temp.yaml" 
-  id="thedoc" 
+<rapi-doc
+  spec-url = "./specs/sample.spec.json"
+  id="thedoc"
   theme = "dark"
-  render-style="read" 
-  schema-style="tree"
+  render-style="read"
+  schema-style="table"
   show-method-in-nav-bar = "true"
   use-path-in-nav-bar = "true"
   show-components = "true"
   show-info = "true"
   show-header = "true"
-  allow-search = "false"  
+  allow-search = "true"
   allow-advanced-search = "true"
   allow-spec-url-load="false"
-  allow-spec-file-download="true"
-  allow-server-selection = "true"
-  allow-authentication	= "true"
+  allow-spec-file-download="false"
+  allow-server-selection = "false"
+  allow-authentication	= "false"
+  default-schema-tab="custom"
+  custom-tab="true"
+  allow-try="false"
   update-route="false"
   match-type="regex"
-  persist-auth="true"
+  persist-auth="false"
   scroll-behavior="smooth"
 ></rapi-doc>
 <!--
   <rapi-doc-mini
     style= "width:600px; padding:0 10px"
-    id = "thedoc" 
+    id = "thedoc"
     spec-url="./specs/code-highlight.yaml"
     theme = "light"
     schema-style = 'table'
@@ -67,7 +70,7 @@
   <br/>
   <rapi-doc-mini
     style= "width:600px; padding:0 10px"
-    id = "thedoc" 
+    id = "thedoc"
     spec-url="./specs/code-highlight.yaml"
     theme = "light"
     schema-style = 'table'
@@ -80,7 +83,7 @@
   <!--
 
   <rapi-doc
-    id = "thedoc" 
+    id = "thedoc"
     spec-url="./specs/code-highlight.yaml"
     theme = "light"
     render-style = "view"
@@ -93,13 +96,13 @@
   > </rapi-doc>
 
 
-    <rapi-doc 
-    id = "thedoc" 
+    <rapi-doc
+    id = "thedoc"
     spec-url="https://petstore.swagger.io/v2/swagger.json1"
     render-style = "read"
     load-fonts = "false"
     show-header = "false"
-  > 
+  >
     <div slot="nav-logo" style="width:100%; display: flex;justify-content: center;">
       <button class='btn medium' onclick="document.getElementById('thedoc').setAttribute('schema-style', 'table')" >Table</button>
       <button class='btn medium' onclick="document.getElementById('thedoc').setAttribute('schema-style', 'tree')" >Tree</button>
@@ -108,7 +111,7 @@
       <b style="color:red"> Hello world</b>
     </div>
   </rapi-doc>
--->  
+-->
 <!--
   <rapi-doc id = "thedoc" ></rapi-doc>
   <script>
@@ -242,7 +245,7 @@
       docEl.loadSpec(objSpec);
     })
   </script>
--->  
+-->
 </body>
 
 </html>
